Fix main menu items visibility [CUSTOM]

--- a/sao/src/theme/coog/sao.less
+++ b/sao/src/theme/coog/sao.less
@@ -305,6 +305,11 @@ nav.toolbar.panel-heading {
     * > .table-hover > tbody > tr:hover {
         background-color:   @color-lighter-blue;
     }
+
+    col.selection-state {
+        // The computation of the columns width when resizing sets a width
+        width: 0px;
+    }
 }
 
 // Do not use too much space for the menu
